--- a/templates/components/Header.html.twig
+++ b/templates/components/Header.html.twig
@@ -8,7 +8,7 @@
                 </a>
         </div>
 
-        <div data-navbar class="bg-background lg:bg-transparent pt-36 lg:pt-0 ease-linear duration-300 lg:transition-none top-0 w-screen h-dvh lg:h-auto lg:w-auto invisible opacity-0 fx-open:visible fx-open:opacity-100 lg:visible lg:opacity-100 translate-y-4 fx-open:translate-y-0 lg:translate-y-0 fixed left-0 lg:static z-30 lg:z-auto lg:flex-1 lg:border-x px-5 lg:px-4 border-border/60 flex lg:justify-center">
+        <div data-navbar class="bg-background lg:bg-transparent pt-24 sm:pt-32 lg:pt-0 ease-linear duration-300 lg:transition-none top-0 w-screen h-dvh lg:h-auto lg:w-auto invisible opacity-0 fx-open:visible fx-open:opacity-100 lg:visible lg:opacity-100 translate-y-4 fx-open:translate-y-0 lg:translate-y-0 fixed left-0 lg:static z-30 lg:z-auto lg:flex-1 lg:border-x px-5 lg:px-4 border-border/60 flex lg:justify-center">
             <ul class="flex flex-col lg:flex-row lg:items-center gap-3 text-muted-foreground">
                 <li class="flex">
                     <a href="{{ path('app_projects_index') }}" class="{{ 'app_projects_index' == app.current_route ? active_class : '' }} flex py-1 px-2.5 rounded-global ease-linear duration-300 hover:bg-muted/20 items-center">
@@ -40,9 +40,6 @@
                     </a>
                 </li>
             </ul>
-        </div>
-
-    
         </div>
     </nav>
 </header>
